--- a/Client/pom.xml
+++ b/Client/pom.xml
@@ -11,6 +11,13 @@
 
     <artifactId>Client</artifactId>
 
+
+    <repositories>
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
+        </repository>
+    </repositories>
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
@@ -24,10 +31,25 @@
             <scope>compile</scope>
         </dependency>
         <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
+            <version>4.12.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.15.2</version>
+        </dependency>
+        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.18.30</version>
+            <version>1.18.36</version>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-media</artifactId>
+            <version>25-ea+1</version>
         </dependency>
     </dependencies>
     <build>
@@ -55,7 +77,7 @@
                         <createDependencyReducedPom>true</createDependencyReducedPom>
                         <transformers>
                             <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                <mainClass>net.wattpadpremium.amazinggame.GameLauncher</mainClass>
+                                <mainClass>net.wattpadpremium.amazinggame.client.GameInstance</mainClass>
                             </transformer>
                         </transformers>
                     </configuration>
