Added offline and online mode servers

--- a/Client/pom.xml
+++ b/Client/pom.xml
@@ -72,7 +72,7 @@
                         <createDependencyReducedPom>true</createDependencyReducedPom>
                         <transformers>
                             <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                <mainClass>net.wattpadpremium.amazinggame.client.GameInstance</mainClass>
+                                <mainClass>net.wattpadpremium.amazinggame.client.Game</mainClass>
                             </transformer>
                         </transformers>
                     </configuration>
